// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`controlled 1`] = `
<label
  className="pf-c-dropdown__toggle-check"
  htmlFor="check"
>
  <input
    aria-invalid={false}
    aria-label="check"
    checked={true}
    disabled={false}
    id="check"
    onChange={[Function]}
    type="checkbox"
  />
</label>
`;

exports[`isDisabled 1`] = `
<label
  className="pf-c-dropdown__toggle-check"
  htmlFor="check"
>
  <input
    aria-invalid={false}
    aria-label="check"
    checked={null}
    disabled={true}
    id="check"
    onChange={[Function]}
    type="checkbox"
  />
</label>
`;

exports[`passing HTML attribute 1`] = `
<label
  className="pf-c-dropdown__toggle-check"
  htmlFor="check"
>
  <input
    aria-invalid={false}
    aria-label="check"
    aria-labelledby="labelId"
    checked={true}
    disabled={false}
    id="check"
    label="label"
    onChange={[Function]}
    type="checkbox"
  />
</label>
`;

exports[`passing class 1`] = `
<label
  className="pf-c-dropdown__toggle-check class-123"
  htmlFor="check"
>
  <input
    aria-invalid={false}
    aria-label="check"
    checked={true}
    disabled={false}
    id="check"
    label="label"
    onChange={[Function]}
    type="checkbox"
  />
</label>
`;

exports[`uncontrolled 1`] = `
<label
  className="pf-c-dropdown__toggle-check"
  htmlFor="check"
>
  <input
    aria-invalid={false}
    aria-label="check"
    checked={null}
    disabled={false}
    id="check"
    onChange={[Function]}
    type="checkbox"
  />
</label>
`;
